// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`WithImage renders header background image 1`] = `
<header
  aria-level="1"
  className="hspOjD"
  role="heading"
>
  <span
    aria-hidden={true}
    className="lblvod ceBTcL"
    style={
      Object {
        "backgroundImage": "url(https://placekitten.com/g/2/2)",
      }
    }
  >
    <img
      className="image image--seo image--hidden fERDWn"
      src="https://placekitten.com/g/2/2"
    />
  </span>
  <div
    className="gxSUUW"
  >
    <div
      className="kmDbEa"
    >
      <div
        className="cqKGWU"
      >
        <div
          className="gXwVvu"
        >
          <img
            alt="place holder"
            src="https://placekitten.com/g/400/242"
          />
        </div>
      </div>
    </div>
  </div>
</header>
`;

exports[`WithImage renders header background image correctly when a withOverlay prop equaling true is passed 1`] = `
<header
  aria-level="1"
  className="hspOjD"
  role="heading"
>
  <span
    aria-hidden={true}
    className="gradient--overlay lblvod ceBTcL"
    style={
      Object {
        "backgroundImage": "url(https://placekitten.com/g/2/2)",
      }
    }
  >
    <img
      className="image image--seo image--hidden fERDWn"
      src="https://placekitten.com/g/2/2"
    />
  </span>
  <div
    className="gxSUUW"
  >
    <div
      className="kmDbEa"
    >
      <div
        className="cqKGWU"
      >
        <div
          className="gXwVvu"
        >
          <img
            alt="place holder"
            src="https://placekitten.com/g/400/242"
          />
        </div>
      </div>
    </div>
  </div>
</header>
`;

exports[`WithImage renders header background image correctly when a withUnderlay prop equaling true is passed 1`] = `
<header
  aria-level="1"
  className="hspOjD"
  role="heading"
>
  <span
    aria-hidden={true}
    className="gradient--underlay lblvod ceBTcL"
    style={
      Object {
        "backgroundImage": "url(https://placekitten.com/g/2/2)",
      }
    }
  >
    <img
      className="image image--seo image--hidden fERDWn"
      src="https://placekitten.com/g/2/2"
    />
  </span>
  <div
    className="gxSUUW"
  >
    <div
      className="kmDbEa"
    >
      <div
        className="cqKGWU"
      >
        <div
          className="gXwVvu"
        >
          <img
            alt="place holder"
            src="https://placekitten.com/g/400/242"
          />
        </div>
      </div>
    </div>
  </div>
</header>
`;

exports[`WithImage renders header with image 1`] = `
<header
  aria-level="1"
  className="hspOjD"
  role="heading"
>
  <span
    className="gEDJRt jIDulM"
    style={Object {}}
  >
    
  </span>
  <div
    className="gxSUUW"
  >
    <div
      className="kmDbEa"
    >
      <div
        className="cqKGWU"
      >
        <div
          className="gXwVvu"
        >
          <img
            alt="place holder"
            src="https://placekitten.com/g/400/242"
          />
        </div>
      </div>
    </div>
  </div>
</header>
`;
